<resources>
    <string name="app_name">Farm Care</string>
    <string name="tvsignin">Sign in</string>
    <string name="tv_signinname">Name</string>
    <string name="et_signinname" />
    <string name="tv_signinEmail">Email</string>
    <string name="et_signinemail" />
    <string name="tv_signinphone">Phone</string>
    <string name="et_signinphone" />
    <string name="tv_signinlocation">Location</string>
    <string name="tv_signinusername">Username</string>
    <string name="tv_signinpassword">Password</string>
    <string name="et_signinlocation" />
    <string name="et_signinusername" />
    <string name="et_signinpassword" />
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_addimage">ADD IMAGE</string>
    <string name="btn_employees">EMPLOYEE</string>
    <string name="btn_checkSchedule">CHECK SCHEDULE</string>
    <string name="btn_salary">SALARY</string>
    <string name="tv_loginlable">Already have an account ?</string>
    <string name="btnloginlable">LOGIN</string>
    <string name="btn_animaledit">Edit</string>
    <string name="btn_animaldelete">Delete</string>
    <string name="tv_animaltype">Animal Type</string>
    <string name="tv_producttype">Product Type</string>
    <string name="tv_section">Section</string>
    <string name="tv_date">Date</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_addanimaltype">Animal Type</string>
    <string name="tv_addanimalproducttype">Product Type</string>
    <string name="tv_addanimalsection">Section</string>
    <string name="tv_addanimaldate">Date</string>
    <string name="tv_addanimalamount">Amount</string>
    <string name="et_addanimalhardata" />
    <string name="et_addanimalproducttype" />
    <string name="et_addanimalsectiondata" />
    <string name="et_addanimaldatedata" />
    <string name="et_addanimalamountdata" />
    <string name="tv_addemployeedetails">Add Employee Details</string>
    <string name="tv_addemployeeid">ID</string>
    <string name="et_addemployeeid" />
    <string name="tv_addemployeename">Name</string>
    <string name="et_addemployeename" />
    <string name="tv_addemployeenic">NIC</string>
    <string name="et_addemployeenic" />
    <string name="tv_addemployeegender">Gender</string>
    <string name="et_addemployeegender" />
    <string name="tv_addemployeecontact">Contact No</string>
    <string name="et_addemployeecontact" />
    <string name="btn_addemployee">ADD EMPLOYEE</string>
    <string name="btn_viewemployee">VIEW EMPLOYEE</string>
    <string name="tv_addworkschedule">Add Work Schedule</string>
    <string name="tv_workscheduleid">ID</string>
    <string name="et_workscheduleid" />
    <string name="tv_workschedulesection">Section</string>
    <string name="et_workschedulesection" />
    <string name="tv_workschedulework">Work</string>
    <string name="et_workschedulework" />
    <string name="tv_workscheduledate">Date</string>
    <string name="et_workscheduledate" />
    <string name="tv_workscheduletime">Time</string>
    <string name="et_workscheduletime" />
    <string name="btn_addworkschedule">ADD WORK SCHEDULE</string>
    <string name="btn_viewworkschedule">VIEW WORKSCHEDULE</string>
    <string name="tv_employeedetails">Employee Details</string>
    <string name="tv_addsalary">Add Employee Salary</string>
    <string name="tv_addsalaryid">Employee ID</string>
    <string name="tv_addsalary_basicsalary">Basic Salary</string>
    <string name="tv_addsalaryothours">OT Hours</string>
    <string name="tv_addsalaryTotalsalary">Total Salary</string>
    <string name="et_addsalaryTotalsalary" />
    <string name="et_addsalaryid" />
    <string name="et_addsalary_basicsalary" />
    <string name="et_addsalaryothours" />
    <string name="btn_calculate">CALCULATE</string>
    <string name="btn_addsalary">ADD SALARY</string>
    <string name="btn_viewsalarydetails">VIEW SALARY DETAILS</string>
    <string name="btn_addcrpharvest">Add New</string>
    <string name="signinlabel">Do not have an account?</string>
    <string name="signuplabel">Sign Up</string>
    <string name="et_compareamount2" />
    <string name="tv_comparevalue">Unit Price in Market</string>
    <string name="tv_grossincome">Gross Income</string>
    <string name="et_grossincome" />
    <string name="btn_percentage">Percentage</string>
    <string name="btn_cropprint">Print Record</string>
    <string name="empty_value">Please Enter Intger Value</string>
    <string name="tv_emplyeeid">ID</string>
    <string name="tv_employeename">Name</string>
    <string name="tv_employeenic">NIC</string>
    <string name="tv_employeegender">Gender</string>
    <string name="tv_employeecontact">Contact No</string>
    <string name="tv_workschedule_id">ID</string>
    <string name="tv_workschedule_section">Section</string>
    <string name="tv_workschedule_date">Date</string>
    <string name="tv_workschedule_datedata" />
    <string name="tv_workschedule_time">Time</string>
    <string name="tv_workschedule_work">Work</string>
    <string name="tv_editemployeedetails">Edit Employee Details</string>
    <string name="btn_edited_edit">EDIT</string>
    <string name="tv_salaryid">ID</string>
    <string name="tv_salary_basicsalary">Basic Salary</string>
    <string name="tv_salaryothours">OT Hours</string>
    <string name="tv_salaryTotalsalary">Total Salary</string>
    <string name="tv_id">id</string>
    <string name="tv_edit_employeedetails">Edit Employee Details</string>
    <string name="tv_editemployeeid" />
    <string name="et_editemployeeid" />
    <string name="tv_editemployeename">Name</string>
    <string name="et_editemployeename" />
    <string name="tv_editemployeenic">NIC</string>
    <string name="et_editemployeenic" />
    <string name="tv_editemployeegender">Gender</string>
    <string name="et_editemployeegender" />
    <string name="tv_editemployeecontact">Contact No</string>
    <string name="et_editemployeecontact" />
    <string name="tv_sendcontactno">Contact No</string>
    <string name="tv_sendmessagedata" />
    <string name="btn_send">SEND</string>
    <string name="tv_sendmessage">Message</string>
    <string name="tv_sendcontactnodata" />
    <string name="et_sendcontactnodata" />
    <string name="et_sendmessagedata" />
    <string name="tv_selling">Selling</string>
    <string name="tv_animal">Animal</string>
    <string name="btn_animal">Animal</string>
    <string name="btn_crops">Crops</string>
    <string name="et_id" />
    <string name="tv_acname">Company</string>
    <string name="tv_apdate">Pickup</string>
    <string name="tv_aup">Uniit Price</string>
    <string name="et_aharvest" />
    <string name="et_acname" />
    <string name="et_apdate" />
    <string name="et_aup" />
    <string name="btn_acalculate">Income</string>
    <string name="tv_acalculate" />
    <string name="btn_add">Add</string>
    <string name="btn_cadd">Add</string>
    <string name="tv_cid" />
    <string name="tv_cid1">Product ID</string>
    <string name="et_cid" />
    <string name="tv_corder" />
    <string name="et_corder" />
    <string name="tv_ccname">Company</string>
    <string name="et_ccname" />
    <string name="tv_cpdate" />
    <string name="tv_cpdate1">Pickup</string>
    <string name="et_cpdate" />
    <string name="tv_cup">Unit Price</string>
    <string name="et_cup" />
    <string name="btn_ccalculate">Income</string>
    <string name="tv_ccalculate" />
    <string name="tv_add_animal_food">Add Animal Food</string>
    <string name="btn_fadd">Add</string>
    <string name="tv_aftype">Food Type</string>
    <string name="et_aftype" />
    <string name="btn_fertilizer_add">Add</string>
    <string name="tv_fdate">Date</string>
    <string name="et_fdate" />
    <string name="tv_ftype">Type</string>
    <string name="et_ftype" />
    <string name="tv_fland">Land Size(m^2)</string>
    <string name="et_fland" />
    <string name="tv_fertilizer_type">Fertilizer Type</string>
    <string name="et_fertlizer_type" />
    <string name="tv_fquantity">Quantity</string>
    <string name="et_fquantity" />
    <string name="tv_fsupplier">Supplier</string>
    <string name="et_fsupplier" />
    <string name="tv_funitp">Unit Price</string>
    <string name="et_funitp" />
    <string name="btn_fcost">Cost</string>
    <string name="tv_fcost" />
    <string name="tv_aid">Product ID</string>
    <string name="tv_fsection">Section</string>
    <string name="et_fsection" />
    <string name="tv_add_animal">Add Animal</string>
    <string name="tv_add_fertilizer">Add Fertilizer</string>
    <string name="btn_add_animal">Add</string>
    <string name="et_aid" />
    <string name="tv_aname">Name</string>
    <string name="et_aname" />
    <string name="tv_aharvest">Harvest</string>
    <string name="et_eharvest" />
    <string name="tv_aorder">Order</string>
    <string name="et_aorder" />
    <string name="tv_aremainder">Remainder</string>
    <string name="et_aremainder" />
    <string name="tv_acompany">Company</string>
    <string name="et_acompany" />
    <string name="tv_apick_date">Pickup Date</string>
    <string name="et_apickup_date" />
    <string name="tv_aunit_price">Unit Price</string>
    <string name="et_aunit_price" />
    <string name="btn_aincome">Income</string>
    <string name="tv_aincome" />
    <string name="tv_add_crop">Add Crop</string>
    <string name="btn_add_crop">Add</string>
    <string name="tv_cid2">Product ID</string>
    <string name="et_cid2" />
    <string name="tv_cname">Name</string>
    <string name="et_cname" />
    <string name="tv_charvest">Harvest</string>
    <string name="et_charvest" />
    <string name="tv_corder1">Order</string>
    <string name="et_corder1" />
    <string name="tv_cremainder">Remainder</string>
    <string name="et_cremainder" />
    <string name="tv_ccopmpany">Company</string>
    <string name="et_ccompany" />
    <string name="tv_cpickup_date">Pickup Date</string>
    <string name="et_cpickup_date" />
    <string name="tv_cunitp">Unit Price</string>
    <string name="et_cunitp" />
    <string name="btn_cincome">Income</string>
    <string name="tv_cincome" />
    <string name="et_apick_date" />
    <string name="tv_add_animalfood">Add Animal Food</string>
    <string name="btn_add_animalfood">Add</string>
    <string name="tv_asection">Section</string>
    <string name="et_asection" />
    <string name="tv_adate">Date</string>
    <string name="et_adate" />
    <string name="tv_atype">Type</string>
    <string name="et_atype" />
    <string name="tv_aage">Age</string>
    <string name="et_aage" />
    <string name="tv_afood_type">Food Type</string>
    <string name="et_afood_type" />
    <string name="tv_aquantity">Quantity</string>
    <string name="et_aquantity" />
    <string name="tv_asupplier">Supplier</string>
    <string name="et_asupplier" />
    <string name="tv_aunitp">Unit Price</string>
    <string name="et_aunitp" />
    <string name="btn_acost">Cost</string>
    <string name="tv_acost" />
    <string name="btn_animal1">Animal</string>
    <string name="btn_crop1">Crops</string>
    <string name="btn_addnewanimal">Add New</string>
    <string name="btn_add_new_crop">Add</string>
    <string name="btn_add_new_animals">Add</string>
    <string name="btn_add_new__animals1">Add</string>
    <string name="btn_animal2">Animal</string>
    <string name="btn_view_all">View</string>
    <string name="btn_view_all2">View</string>
    <string name="et_animal_income" />
    <string name="et_cincome" />
    <string name="tv_croporder">Order</string>
    <string name="et_croporder" />
    <string name="tv_cropup">Unit Price</string>
    <string name="et_cropup" />
    <string name="btn_cropincome">Income</string>
    <string name="et_cropincome" />
    <string name="et_crop_unitp" />
    <string name="tv_update_crop">Update Crop</string>
    <string name="btn_update_crop">Update</string>
    <string name="btn_clear_crop">Clear</string>
</resources>